crates/math-core/tests/snapshots/conversion_test__mathbin_subscript_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mathbin{+}_2)"
---
<math>
    <mi>x</mi>
    <msub>
        <mo stretchy="false" lspace="0" rspace="0">+</mo>
        <mn>2</mn>
    </msub>
    <mo stretchy="false">)</mo>
</math>
