crates/math-core/tests/snapshots/conversion_test__mathcal_vs_mathscr.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathcal{A}, \\mathscr{A}"
---
<math>
    <mi>𝒜︀</mi>
    <mo>,</mo>
    <mi>𝒜︁</mi>
</math>
