crates/math-core/tests/snapshots/conversion_test__mathcal_vs_mathscr_multi.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathcal{AB}, \\mathscr{AB}"
---
<math>
    <mrow><mspace/><mi>𝒜︀ℬ︀</mi></mrow>
    <mo>,</mo>
    <mrow><mspace/><mi>𝒜︁ℬ︁</mi></mrow>
</math>
