crates/math-core/tests/snapshots/conversion_test__mathcal_vs_mathscr_single.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathcal A, \\mathscr A"
---
<math>
    <mrow><mspace/><mi>𝒜︀</mi></mrow>
    <mo>,</mo>
    <mrow><mspace/><mi>𝒜︁</mi></mrow>
</math>
