crates/math-core/tests/snapshots/conversion_test__mathchoice.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathchoice{D}{T}{S}{SS}"
---
<math>
    <mi>T</mi>
</math>
