crates/math-core/tests/snapshots/conversion_test__mathchoice_display_style.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\displaystyle\\mathchoice{D}{T}{S}{SS}"
---
<math>
    <mrow displaystyle="true" scriptlevel="0">
        <mi>D</mi>
    </mrow>
</math>
