crates/math-core/tests/snapshots/conversion_test__mathchoice_empty.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\mathchoice{}{}{}{}b"
---
<math>
    <mi>a</mi>
    <mrow></mrow>
    <mi>b</mi>
</math>
