crates/math-core/tests/snapshots/conversion_test__mathchoice_multiple_tokens.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathchoice{ab}{cd}{ef}{gh}"
---
<math>
    <mi>c</mi>
    <mi>d</mi>
</math>
